--- a/login.html
+++ b/login.html
@@ -63,8 +63,8 @@
     </div>
   </div>    
     <script type="text/javascript" src="cordova.js"></script>
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
-    <script type="text/javascript" src="js/jquery-2.1.4.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!--    <script type="text/javascript" src="js/jquery-2.1.4.js"></script>-->
     <script type="text/javascript" src="js/framework7.js"></script>
     <script type="text/javascript" src="js/my-app.js"></script>
     <script>
@@ -75,7 +75,7 @@
             var regId = $("#regId").val();
            
             $.ajax({
-                url:'http://desde.260mb.net/usuario.php?ckattempt=2',
+                url:'http://desde.260mb.net/usuario.php?ckattempt=1',
                 type: 'GET',
                 data: {op:'reg', name:name, email:email, regId:regId},
                 dataType : 'jsonp',
