--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
             var regId = $("#regId").val();
            
             $.ajax({
-                url:'http://desde.260mb.net/usuario.php?ckattempt=2',
+                url:'http://desde.260mb.net/usuario.php',
                 type: 'GET',
                 data: {op:'reg', name:name, email:email, regId:regId},
                 dataType : 'jsonp',
