--- a/login.html
+++ b/login.html
@@ -75,16 +75,16 @@
             var regId = $("#regId").val();
            
             $.ajax({
-                url:'http://desde.260mb.net/usuario.php?ckattempt=1',
+                url:'http://desde9.esy.es/usuario.php',
                 type: 'GET',
                 data: {op:'reg', name:name, email:email, regId:regId},
                 dataType : 'jsonp',
 //                jsonp: false,
-                cache : true,
+//                cache : true,
 //                jsonpCallback: "callback", 
 //                contentType: "application/json; charset=utf-8",
 //                jsonp: 'callback',
-                crossDomain: true,
+//                crossDomain: true,
 			success: function(data) {
 				if(data.estatus == true){
                     console.log(data.mensaje);
